--- a/style.css
+++ b/style.css
@@ -4,4 +4,5 @@ textarea {
     overflow-x: scroll;
     min-width: 100%;
     height: inherit;
+    font-family: 'Courier New', Courier, monospace;
   }
